# optimize-anything

./: .gitignore  .mcp.json  CLAUDE.md  README.md
docs/: architecture.mmd
docs/plans/: 2026-03-02-implementation-plan.md  optimize-anything-design.md
engine/: pyproject.toml
engine/src/optimize_anything/: __init__.py  api.py  cli.py  config.py
engine/src/optimize_anything/core/: __init__.py  candidate.py  engine.py  events.py  pareto.py  state.py
engine/src/optimize_anything/evaluators/: __init__.py  base.py  llm_judge.py  python_eval.py  shell_eval.py
engine/src/optimize_anything/proposer/: __init__.py  claude_proposer.py  prompts.py
engine/src/optimize_anything/strategies/: __init__.py  sampling.py  selection.py  stopping.py
engine/tests/: test_api.py  test_checkpoint.py  test_engine.py  test_evaluators.py  test_integration.py  test_pareto.py  test_proposer.py  test_state.py  test_strategies.py
mcp-server/: package-lock.json  package.json  start-server.sh  tsconfig.json
mcp-server/src/: index.ts  process-manager.ts  tools.ts
scripts/: optimize_skill.py  optimized_llm_evals_skill.md
skill/: SKILL.md
