[project]
name = "optimize-anything"
version = "0.1.0"
description = "Universal text artifact optimizer using LLM-powered search"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.80.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
optimize-anything = "optimize_anything.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/optimize_anything"]
